Fixed gitignore for images

--- a/SkySearchImages/result_analysis.ipynb
+++ b/SkySearchImages/result_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
        "4   right bottom medium      right bottom near     center bottom near  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
    "source": [
     "import pandas as pd\n",
     "excel_filename = \"SkySearch Images.xlsx\"\n",
-    "prediction_column = \"ChatGPT 4o prediction3\"\n",
+    "prediction_column = \"ChatGPT 4o prediction\"\n",
     "df = pd.read_excel(excel_filename)\n",
     "df.dropna(inplace=True)\n",
     "df.head()"
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -183,6 +183,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Unnamed: 0.4</th>\n",
        "      <th>Unnamed: 0.3</th>\n",
        "      <th>Unnamed: 0.2</th>\n",
        "      <th>Unnamed: 0.1</th>\n",
@@ -193,11 +194,13 @@
        "      <th>Image number</th>\n",
        "      <th>ChatGPT 4o prediction</th>\n",
        "      <th>ChatGPT 4o prediction2</th>\n",
+       "      <th>ChatGPT 4o prediction3</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -208,9 +211,11 @@
        "      <td>0</td>\n",
        "      <td>center bottom far</td>\n",
        "      <td>center bottom far</td>\n",
+       "      <td>center bottom far</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -221,9 +226,11 @@
        "      <td>1</td>\n",
        "      <td>left bottom near</td>\n",
        "      <td>left bottom near</td>\n",
+       "      <td>left bottom near</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
@@ -234,9 +241,11 @@
        "      <td>2</td>\n",
        "      <td>center bottom medium</td>\n",
        "      <td>left center medium</td>\n",
+       "      <td>center bottom near</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
@@ -247,9 +256,11 @@
        "      <td>3</td>\n",
        "      <td>center center near</td>\n",
        "      <td>center center near</td>\n",
+       "      <td>center top near</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
@@ -260,35 +271,36 @@
        "      <td>4</td>\n",
        "      <td>right bottom medium</td>\n",
        "      <td>right bottom near</td>\n",
+       "      <td>center bottom near</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0.3  Unnamed: 0.2  Unnamed: 0.1  Unnamed: 0 Image File name  \\\n",
-       "0             0             0             0           0   IMAGE_000.jpg   \n",
-       "1             1             1             1           1   IMAGE_001.jpg   \n",
-       "2             2             2             2           2   IMAGE_002.jpg   \n",
-       "3             3             3             3           3   IMAGE_003.jpg   \n",
-       "4             4             4             4           4   IMAGE_004.jpg   \n",
+       "   Unnamed: 0.4  Unnamed: 0.3  Unnamed: 0.2  Unnamed: 0.1  Unnamed: 0  \\\n",
+       "0             0             0             0             0           0   \n",
+       "1             1             1             1             1           1   \n",
+       "2             2             2             2             2           2   \n",
+       "3             3             3             3             3           3   \n",
+       "4             4             4             4             4           4   \n",
        "\n",
-       "        Item in image   True item  Location  Image number  \\\n",
-       "0  Blue recycling bin     center center far             0   \n",
-       "1           Black cup    left bottom medium             1   \n",
-       "2        Crock sandal  center center medium             2   \n",
-       "3          Amazon box   center center close             3   \n",
-       "4          Basketball  center center medium             4   \n",
+       "  Image File name       Item in image   True item  Location  Image number  \\\n",
+       "0   IMAGE_000.jpg  Blue recycling bin     center center far             0   \n",
+       "1   IMAGE_001.jpg           Black cup    left bottom medium             1   \n",
+       "2   IMAGE_002.jpg        Crock sandal  center center medium             2   \n",
+       "3   IMAGE_003.jpg          Amazon box   center center close             3   \n",
+       "4   IMAGE_004.jpg          Basketball  center center medium             4   \n",
        "\n",
-       "  ChatGPT 4o prediction ChatGPT 4o prediction2  \n",
-       "0     center bottom far      center bottom far  \n",
-       "1      left bottom near       left bottom near  \n",
-       "2  center bottom medium     left center medium  \n",
-       "3    center center near     center center near  \n",
-       "4   right bottom medium      right bottom near  "
+       "  ChatGPT 4o prediction ChatGPT 4o prediction2 ChatGPT 4o prediction3  \n",
+       "0     center bottom far      center bottom far      center bottom far  \n",
+       "1      left bottom near       left bottom near       left bottom near  \n",
+       "2  center bottom medium     left center medium     center bottom near  \n",
+       "3    center center near     center center near        center top near  \n",
+       "4   right bottom medium      right bottom near     center bottom near  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,16 +315,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy for LR: 0.7380952380952381\n",
+      "Accuracy for LR: 0.8333333333333334\n",
       "Accuracy for UD: 0.5238095238095238\n",
-      "Accuracy for FN: 0.38095238095238093\n"
+      "Accuracy for FN: 0.30952380952380953\n"
      ]
     }
    ],
@@ -325,9 +337,8 @@
     "        return 'near'\n",
     "    else:\n",
     "        return x\n",
+    "\n",
     "df[\"FN_True\"] = df[\"FN_True\"].apply(lambda x: recast_close_to_near(x))\n",
-    "\n",
-    "\n",
     "\n",
     "df[\"LR_Pred\"] = df[prediction_column].apply(lambda x: x.split()[0])\n",
     "df[\"UD_Pred\"] = df[prediction_column].apply(lambda x: x.split()[1])\n",
